--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	},
-	"author": "Ikmal"
+	"author": "Ikmal",
+	"description": "I want to change my life"
 }
