--- a/package.json
+++ b/package.json
@@ -13,5 +13,5 @@
 	},
 	"author": "Ikmal",
 	"description": "I want to change my life",
-	"keywords": [ "freeCodeCamp", "test", "api" ]
+	"keywords": [ "freecodecamp", "test", "api" ]
 }
