--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0",
-		"moment": "^2.14.0"
+		"moment": "^2.29.1"
 	},
 	"main": "server.js",
 	"scripts": {
@@ -14,7 +14,11 @@
 	},
 	"author": "Ikmal",
 	"description": "I want to change my life",
-	"keywords": [ "freecodecamp", "test", "api" ],
+	"keywords": [
+		"freecodecamp",
+		"test",
+		"api"
+	],
 	"license": "MIT",
 	"version": "1.0.0"
 }
